# CAF

./: .gitignore  AGENTS.md  ANALISE_ESTRUTURA.md  CLAUDE.md  INDEXING.md  MANIFEST.md  PROMPT_REVISAO_INTEGRAL_V2.md  README.md  REVISAO_INTEGRAL_V2_RESULTADO.md  TCU_Sessoes_Julgamento_Expandido_2025_2026.docx  TCU_Sessoes_Julgamento_YouTube_2025_2026.docx  TESTES_INDEXADOR.md  TESTES_INDEXADOR_V2.md  TESTES_JURY_PANEL.md  TESTES_MINIMAX_GO_NOGO.md  TESTES_RETESTE_MINIMAX_GO_NOGO.md  TESTES_RETESTE_RUN_PANEL.md  TESTES_RETESTE_SWARM_PANEL.md  TESTES_SWARM_PANEL.md  audit_pdf_extraction.py  extract_pdf_text.py  index_gemini.py  reorganizar.sh  requirements-indexing.txt  run_indexer_tests.py  search_review.py
caf_audit_knowledge/: README.md  docker-compose.yml  pyproject.toml
caf_audit_knowledge/config/elastic/: caf_chunks.mapping.json  caf_documents.mapping.json
caf_audit_knowledge/src/caf_audit_knowledge/: cli.py  config.py  constants.py  repo_semantics.py  text_extractors.py
caf_audit_knowledge/src/caf_audit_knowledge/answering/: __init__.py  aggregation.py  classifier.py  prompts.py  service.py
caf_audit_knowledge/src/caf_audit_knowledge/graph/: __init__.py  app.py  schema.py
caf_audit_knowledge/src/caf_audit_knowledge/ingest/: __init__.py  chunking.py  pipeline.py  relationships.py
caf_audit_knowledge/src/caf_audit_knowledge/llm/: __init__.py  providers.py
caf_audit_knowledge/src/caf_audit_knowledge/retrieval/: __init__.py  elasticsearch_store.py  reranker.py  scoring.py  service.py  (+1 more)
caf_audit_knowledge/tests/: test_chunking.py  test_repo_semantics.py
(+207 files in other folders)
