[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caf-audit-knowledge"
version = "0.1.0"
description = "Local-first, audit-grade hybrid retrieval system tailored to CAF-FINAL."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "elasticsearch>=8.14.0,<9",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "openai>=1.51.0",
  "pgvector>=0.3.5",
  "psycopg[binary]>=3.2.3",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "pypdf>=5.0.0",
  "python-docx>=1.1.2",
  "python-multipart>=0.0.12",
  "sqlalchemy>=2.0.35",
  "sentence-transformers>=3.0.1",
  "strawberry-graphql[fastapi]>=0.256.0",
  "tenacity>=9.0.0",
  "typer>=0.12.5",
  "uvicorn>=0.31.0",
  "watchdog>=5.0.3",
]

[project.optional-dependencies]
chroma = ["chromadb>=0.5.5"]
gemini = ["google-genai>=1.10.0"]
dev = ["pytest>=8.3.0", "ruff>=0.7.0"]

[project.scripts]
caf-audit = "caf_audit_knowledge.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
